# Tucil3_13523082

./: .gitignore  CMakeLists.txt  README.md
include/controller/: ProgramController.hpp
include/model/: Algorithms.hpp  Board.hpp  Piece.hpp  Position.h  ProgramModel.hpp  Reader.hpp
include/view/: ProgramView.hpp
src/controller/: ProgramController.cpp  main.cpp
src/model/: Algorithms.cpp  Board.cpp  Piece.cpp  ProgramModel.cpp  Reader.cpp
src/view/: ProgramView.cpp
test/: test2.txt  test3.txt  test4.txt  test5.txt
